Revert "Migrate backend from OpenAI to Groq API with gpt-oss-120b model"

--- a/.env.example
+++ b/.env.example
@@ -13,16 +13,12 @@
 #    (já está no .gitignore)
 # ============================================
 
-# Groq API Configuration (para chamadas LLM principais)
-GROQ_API_KEY=sua-chave-groq-aqui
-GROQ_BASE_URL=https://api.groq.com/openai/v1
-
-# OpenAI API Configuration (para embeddings no system_matcher)
-# OPENAI_API_KEY=sua-chave-openai-aqui
+# OpenAI API Configuration
+OPENAI_API_KEY=sua-chave-openai-aqui
 
 # Optional: Model Configuration
-# PRIMARY_MODEL=gpt-oss-120b
-# FALLBACK_MODEL=llama-3.3-70b-versatile
+# PRIMARY_MODEL=gpt-5
+# FALLBACK_MODEL=gpt-4o
 
 # Optional: Request Timeout (in seconds)
 # OPENAI_REQUEST_TIMEOUT=600
